优化了系统

--- a/project/client/src/auth.html
+++ b/project/client/src/auth.html
@@ -103,7 +103,8 @@
                      ,w5cValidatorProvider
                      ) {
 
-    RestangularProvider.setBaseUrl('http://localhost:8081/api');
+//    RestangularProvider.setBaseUrl('http://59.110.12.232:3001/api');
+    RestangularProvider.setBaseUrl('http://localhost:3001/api');
 
 
     RestangularProvider.setFullResponse(true);
