--- a/project/client/src/auth.html
+++ b/project/client/src/auth.html
@@ -103,7 +103,8 @@
                      ,w5cValidatorProvider
                      ) {
 
-    RestangularProvider.setBaseUrl('http://59.110.12.232:3000/api');
+//    RestangularProvider.setBaseUrl('http://59.110.12.232:3000/api');
+      RestangularProvider.setBaseUrl('http://192.168.1.4:3002/api');
 //    RestangularProvider.setBaseUrl('http://192.168.1.119:3002/api');
 
 
