--- a/project/phone/index.html
+++ b/project/phone/index.html
@@ -60,7 +60,7 @@
     <script src="bower_components/moment/min/moment-with-locales.min.js"></script>
     <script src="bower_components/highcharts/highcharts.js"></script>
     <script src="bower_components/highcharts-ng/dist/highcharts-ng.min.js"></script>
-    <!--<script src="bower_components/ionic-datepicker/dist/ionic-datepicker.bundle.min.js"></script>-->
+    <script src="bower_components/ionic-datepicker/dist/ionic-datepicker.bundle.min.js"></script>
     <script src="bower_components/angular-jwt/dist/angular-jwt.min.js"></script>
     <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.min.js"></script>
     <script src="bower_components/ionic-validate-with-toast/dist/ionicValidateWithToast.bundle.js"></script>
