清理不必要的图片

--- a/project/phone/mobile/app/home/Home.html
+++ b/project/phone/mobile/app/home/Home.html
@@ -2,6 +2,13 @@
    <ion-content>
 
 
+       <div class="row responsive-sm">
+           <div class="col">.col</div>
+           <div class="col">.col</div>
+           <div class="col">.col</div>
+           <div class="col">.col</div>
+       </div>
+
        <div class="list">
            <label class="item item-input">
                <input type="text" ng-model="vm.strBaZi" placeholder="输入八字">
