--- a/project/phone/mobile/app/home/Home.html
+++ b/project/phone/mobile/app/home/Home.html
@@ -2,13 +2,6 @@
    <ion-content>
 
 
-       <div class="row responsive-sm">
-           <div class="col">.col</div>
-           <div class="col">.col</div>
-           <div class="col">.col</div>
-           <div class="col">.col</div>
-       </div>
-
        <div class="list">
            <label class="item item-input">
                <input type="text" ng-model="vm.strBaZi" placeholder="输入八字">
@@ -18,6 +11,24 @@
        <button  class="button button-block button-balanced" ng-click="vm.analyze()" >分析</button>
 
 
+       <div class="row">
+           <div class="col">
+               <p> <span>{{vm.nianzhu}}</span></p>
+               <p><span  class="calm">{{vm.niannayin}}</span></p>
+           </div>
+           <div class="col">
+               <p> <span class="text-success">{{vm.yuezhu}}</span></p>
+               <p><span class="calm">{{vm.yuenayin}}</span></p>
+           </div>
+           <div class="col">
+               <p> <span class="text-success">{{vm.rizhu}}</span></p>
+               <p><span class="calm">{{vm.rinayin}}</span></p>
+           </div>
+           <div class="col">
+               <p> <span class="text-success">{{vm.shizhu}}</span></p>
+               <p><span class="calm">{{vm.shinayin}}</span></p>
+           </div>
+       </div>
 
 
        <div class="row">
