--- a/project/phone/mobile/app/home/Home.html
+++ b/project/phone/mobile/app/home/Home.html
@@ -31,9 +31,10 @@
        </div>
 
 
-       <div class="row">
-           <json-formatter json="vm.gufa" open="1"></json-formatter>
+       <div style="white-space:normal;">
+           <json-formatter json="vm.analyzeResult" open="1"></json-formatter>
        </div>
+
 
    </ion-content>
 
