--- a/project/phone/mobile/app/home/Home.html
+++ b/project/phone/mobile/app/home/Home.html
@@ -1,15 +1,12 @@
 <ion-view class="bar-positive" view-title="主页">
-   <ion-content>
+   <ion-content scroll="false">
 
-
-       <div class="list">
-           <label class="item item-input">
+       <div class="list item-input-inset">
+           <label class="item-input-wrapper">
                <input type="text" ng-model="vm.strBaZi" placeholder="输入八字">
            </label>
-
+           <button  class="button button-small button-balanced" ng-click="vm.analyze()" >分析</button>
        </div>
-       <button  class="button button-block button-balanced" ng-click="vm.analyze()" >分析</button>
-
 
        <div class="row">
            <div class="col">
@@ -31,9 +28,13 @@
        </div>
 
 
-       <div style="white-space:normal;">
-           <json-formatter json="vm.analyzeResult" open="1"></json-formatter>
-       </div>
+       <ion-scroll style="height: 100%;">
+           <div style="white-space:normal;">
+               <json-formatter json="vm.analyzeResult" open="1"></json-formatter>
+           </div>
+       </ion-scroll>
+
+
 
 
    </ion-content>
