--- a/project/phone/mobile/app/home/Home.html
+++ b/project/phone/mobile/app/home/Home.html
@@ -22,29 +22,44 @@
                    <p> <span>{{vm.nianzhu}}</span></p>
                </a>
 
+               <a ng-click="vm.showNaYinquxiang(vm.nianzhu)">
+                   <p><span  class="calm">{{vm.niannayin}}</span></p>
+               </a>
 
-               <p><span  class="calm">{{vm.niannayin}}</span></p>
+
+
            </div>
            <div class="col">
                <a ng-click="vm.openPopover(vm.yuezhu)">
                    <p> <span >{{vm.yuezhu}}</span></p>
                </a>
 
-               <p><span class="calm">{{vm.yuenayin}}</span></p>
+               <a ng-click="vm.showNaYinquxiang(vm.yuezhu)">
+                   <p><span class="calm">{{vm.yuenayin}}</span></p>
+               </a>
+
+
            </div>
            <div class="col">
                <a ng-click="vm.openPopover(vm.rizhu)">
                    <p> <span>{{vm.rizhu}}</span></p>
                </a>
 
-               <p><span class="calm">{{vm.rinayin}}</span></p>
+               <a ng-click="vm.showNaYinquxiang(vm.rizhu)">
+                   <p><span class="calm">{{vm.rinayin}}</span></p>
+               </a>
+
+
            </div>
            <div class="col">
                <a ng-click="vm.openPopover(vm.shizhu)">
                    <p> <span>{{vm.shizhu}}</span></p>
                </a>
 
-               <p><span class="calm">{{vm.shinayin}}</span></p>
+               <a ng-click="vm.showNaYinquxiang(vm.shizhu)">
+                   <p><span class="calm">{{vm.shinayin}}</span></p>
+               </a>
+
            </div>
        </div>
 
