--- a/project/phone/mobile/app/home/Home.html
+++ b/project/phone/mobile/app/home/Home.html
@@ -22,7 +22,7 @@
                    <p> <span>{{vm.nianzhu}}</span></p>
                </a>
 
-               <a ng-click="vm.showNaYinquxiang(vm.nianzhu)">
+               <a ng-click="vm.showNaYinXingZhi(vm.nianzhu)">
                    <p><span  class="calm">{{vm.niannayin}}</span></p>
                </a>
 
@@ -34,7 +34,7 @@
                    <p> <span >{{vm.yuezhu}}</span></p>
                </a>
 
-               <a ng-click="vm.showNaYinquxiang(vm.yuezhu)">
+               <a ng-click="vm.showNaYinXingZhi(vm.yuezhu)">
                    <p><span class="calm">{{vm.yuenayin}}</span></p>
                </a>
 
@@ -45,7 +45,7 @@
                    <p> <span>{{vm.rizhu}}</span></p>
                </a>
 
-               <a ng-click="vm.showNaYinquxiang(vm.rizhu)">
+               <a ng-click="vm.showNaYinXingZhi(vm.rizhu)">
                    <p><span class="calm">{{vm.rinayin}}</span></p>
                </a>
 
@@ -56,7 +56,7 @@
                    <p> <span>{{vm.shizhu}}</span></p>
                </a>
 
-               <a ng-click="vm.showNaYinquxiang(vm.shizhu)">
+               <a ng-click="vm.showNaYinXingZhi(vm.shizhu)">
                    <p><span class="calm">{{vm.shinayin}}</span></p>
                </a>
 
