--- a/project/client/src/auth.html
+++ b/project/client/src/auth.html
@@ -103,8 +103,8 @@
                      ,w5cValidatorProvider
                      ) {
 
-   RestangularProvider.setBaseUrl('http://47.105.164.246/api');
-      // RestangularProvider.setBaseUrl('http://localhost:3002/api');
+//   RestangularProvider.setBaseUrl('http://47.105.164.246/api');
+       RestangularProvider.setBaseUrl('http://localhost:6002/api');
 //    RestangularProvider.setBaseUrl('http://192.168.1.119:3002/api');
 
 
